@@ -3,8 +3,7 @@ class ThreadStorm
     attr_reader :thread, :execution
     
     # Takes the threadsafe queue and options from the thread pool.
-    def initialize(queue, sentinel)
-      @queue     = queue
+    def initialize(sentinel)
       @sentinel  = sentinel
       @execution = nil # Current execution we're working on.
       @thread    = Thread.new(self){ |me| me.run }
@@ -17,30 +16,20 @@ class ThreadStorm
     
     # Pop an execution off the queue and process it, or pass off control to a different thread.
     def pop_and_process_execution
-      @sentinel.synchronize do |e_cond, p_cond|
-        # Become idle and signal that we're idle.
-        @execution = nil
-        e_cond.signal
-        
-        # Give up the lock and wait until there is work to do.
-        p_cond.wait_while{ @queue.empty? }
-        
-        # Get the work to do (implicitly becoming busy).
-        @execution = @queue.shift
+      @execution = @sentinel.pop_queue
+      if not die?
+        process_execution_with_timeout
+        @sentinel.decr_queue_size
       end
-      
-      process_execution_with_timeout unless die?
     end
     
     # Process the execution, handling timeouts and exceptions.
     def process_execution_with_timeout
-      execution.started!
-      execution.prepare!
-      
       # Pull out some options.
       timeout = execution.options[:timeout]
       timeout_method = execution.options[:timeout_method]
       
+      execution.started!
       begin
         if timeout
           timeout_method.call(timeout){ execution.execute! }
@@ -54,10 +43,6 @@ class ThreadStorm
       ensure
         execution.finished!
       end
-    end
-    
-    def busy?
-      !!@execution and not die?
     end
     
     # True if this worker's thread should die.
